<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Choosephoto">


    <Button
            android:text="@string/Select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnChoose"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintVertical_bias="0.163"/>
    <Button
            android:text="@string/Upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnUpload"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.863"
            app:layout_constraintVertical_bias="0.162"/>
    <ImageView
            android:layout_width="283dp"
            android:layout_height="383dp" tools:srcCompat="@tools:sample/avatars" android:id="@+id/imgView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.66"/>
    <Button
            android:text="@string/Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.863"
            app:layout_constraintVertical_bias="0.04"/>
</androidx.constraintlayout.widget.ConstraintLayout>
